infra/qsb/k8s/apps/downloads/sccarr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sccarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sccarr
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: '8989'
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: '7878'
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: aria2
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP
